AAA MATENME POR FAVOR
AAAA ODIIO ESTE INPUT

Co-Authored-By: Manhuel_Et26 <106595700+OGBiggieCheese@users.noreply.github.com>
Co-Authored-By: lucasboghossian <106191563+lucasboghossian@users.noreply.github.com>
Co-Authored-By: PakitoFlow <106191316+PakitoFlow@users.noreply.github.com>
Co-Authored-By: nicolas-k-cmd <62914367+nicolas-k-cmd@users.noreply.github.com>

--- a/kyatsu/package.json
+++ b/kyatsu/package.json
@@ -1,6 +1,23 @@
 {
-
   "dependencies": {
-    "node-sass": "^8.0.0"
-  }
+    "express": "^4.18.2",
+    "node-sass": "^8.0.0",
+    "redis": "^4.6.5",
+    "response-time": "^2.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  },
+  "name": "kyatsu",
+  "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
+  "version": "1.0.0",
+  "main": "index.js",
+  "directories": {
+    "test": "tests"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC"
 }
