--- a/kyatsu/composer.json
+++ b/kyatsu/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "predis/predis": "^2.1",
         "spatie/laravel-permission": "^5.10",
         "tightenco/ziggy": "^1.5"
     },
