--- a/kyatsu/package.json
+++ b/kyatsu/package.json
@@ -1,12 +1,15 @@
 {
   "dependencies": {
+    "@types/bootstrap": "^5.2.6",
     "express": "^4.18.2",
     "node-sass": "^8.0.0",
     "redis": "^4.6.5",
     "response-time": "^2.3.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "@types/jquery": "^3.5.16",
+    "nodemon": "^2.0.22",
+    "typescript": "^5.1.3"
   },
   "name": "kyatsu",
   "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
