--- a/kyatsu/package.json
+++ b/kyatsu/package.json
@@ -1,14 +1,18 @@
 {
   "dependencies": {
-    "@types/bootstrap": "^5.2.6",
     "express": "^4.18.2",
     "node-sass": "^8.0.0",
     "redis": "^4.6.5",
     "response-time": "^2.3.2"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.6",
+    "@types/daterangepicker": "^3.1.5",
     "@types/jquery": "^3.5.16",
+    "@types/sweetalert": "^2.0.4",
+    "moment": "^2.29.4",
     "nodemon": "^2.0.22",
+    "sweetalert2": "^11.7.27",
     "typescript": "^5.1.3"
   },
   "name": "kyatsu",
