--- a/kyatsu/composer.json
+++ b/kyatsu/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "cybercog/laravel-ban": "^4.8",
+        "doctrine/dbal": "^3.7",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
