--- a/kyatsu/composer.json
+++ b/kyatsu/composer.json
@@ -7,11 +7,14 @@
     "require": {
         "php": "^8.1",
         "cybercog/laravel-ban": "^4.8",
+        "doctrine/annotations": "^1.7.0",
         "doctrine/dbal": "^3.7",
+        "doctrine/lexer": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^10.0",
+        "laravel/framework": "^10.26.2",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "mercadopago/dx-php": "2.6.1",
         "predis/predis": "^2.1",
         "spatie/laravel-permission": "^5.10",
         "tightenco/ziggy": "^1.5"
