--- a/kyatsu/.env.example
+++ b/kyatsu/.env.example
@@ -15,7 +15,7 @@ DB_DATABASE=kyatsu
 DB_USERNAME=root
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=array
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
@@ -43,9 +43,9 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_APP_ID= W2ZUX7M?axS,N6wfDB
+PUSHER_APP_KEY= W2ZUX7M?axS,N6wfDBOdsadsadsa
+PUSHER_APP_SECRET= W2ZUX7M?axS,N6wfDBjoDAKADSSDAJKKJSDA
 PUSHER_HOST=
 PUSHER_PORT=443
 PUSHER_SCHEME=https
