--- a/kyatsu/composer.json
+++ b/kyatsu/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "beyondcode/laravel-websockets": "^1.14",
         "cybercog/laravel-ban": "^4.8",
         "doctrine/annotations": "^1.7.0",
         "doctrine/dbal": "^3.7",
@@ -16,6 +17,7 @@
         "laravel/tinker": "^2.8",
         "mercadopago/dx-php": "2.6.1",
         "predis/predis": "^2.1",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^5.10",
         "tightenco/ziggy": "^1.5"
     },
