--- a/kyatsu/.env.example
+++ b/kyatsu/.env.example
@@ -43,9 +43,9 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID= W2ZUX7M?axS,N6wfDB
-PUSHER_APP_KEY= W2ZUX7M?axS,N6wfDBOdsadsadsa
-PUSHER_APP_SECRET= W2ZUX7M?axS,N6wfDBjoDAKADSSDAJKKJSDA
+PUSHER_APP_ID= W2ZUX7MaxSAAN6wfDB
+PUSHER_APP_KEY= W2ZUX7MaxSAAN6wfDBOdsadsadsa
+PUSHER_APP_SECRET= W2ZUX7MaxSAAN6wfDBjoDAKADSSDAJKKJSDA
 PUSHER_HOST=
 PUSHER_PORT=443
 PUSHER_SCHEME=https
