--- a/kyatsu/composer.json
+++ b/kyatsu/composer.json
@@ -16,8 +16,10 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "mercadopago/dx-php": "2.6.1",
+        "motomedialab/laravel-vite-helper": "^1.4",
         "predis/predis": "^2.1",
         "pusher/pusher-php-server": "^7.2",
+        "react/promise": "^3.1",
         "spatie/laravel-permission": "^5.10",
         "tightenco/ziggy": "^1.5"
     },
@@ -29,6 +31,7 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.0",
+        "reliese/laravel": "^1.2",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
