--- a/kyatsu/package.json
+++ b/kyatsu/package.json
@@ -12,11 +12,13 @@
     "@types/jquery": "^3.5.16",
     "@types/sweetalert": "^2.0.4",
     "laravel-echo": "^1.15.3",
+    "laravel-vite-plugin": "^0.8.1",
     "moment": "^2.29.4",
     "nodemon": "^3.0.1",
     "pusher-js": "^8.3.0",
     "sweetalert2": "^11.6.13",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "vite": "^4.5.0"
   },
   "name": "kyatsu",
   "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
@@ -26,7 +28,9 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite",
+    "build": "vite build"
   },
   "author": "",
   "license": "ISC"
